# BooBoo

./: .gitignore  BooBoo.txt  CMakeLists.txt  README.md  README.txt  TODO.txt  beepboop.manifest  booboo.manifest  boopboop.manifest  program.bb  versioninfo.rc
data/audio/mml/music/: gameover.mml
data/audio/mml/sfx/: point.mml  wall.mml
data/code/: pong.bb  slideshow_logic.inc  sneaky.bb
data/gfx/images/misc/: back_tire.tga  car.tga  dog.tga  explosion.tga  front_tire.tga  glasses.tga  grass.tga  guy.tga  icon16.tga  icon24.tga  icon256.tga  icon32.tga  robot.tga  walk1.tga  walk2.tga  walk3.tga
docs/: 3rd_party.html
examples/: blip.bb  blip.boo  clock.boo  gameover.bb  gameover.boo  gradient.boo  main.bb  main.boo  memory.bb  memory.boo  poll_joystick.inc  pong.bb  pong.boo  robots.boo  secret.bb  secret.boo  sine.bb  sine.boo  slideshow_logic.inc  slideshow_start.inc  sneaky.bb  sneaky.boo  subroutine.bb  walk.boo
examples/benchmark/: benchmark.boo  benchmark.lua  benchmark2.lua
examples/experimental/: plasma.bb
examples/ship/: blip.boo  clock.boo  gameover.boo  main.boo  main.sub  melons.boo  memory.boo  poll_joystick.inc  pong.boo  rgb.boo  robots.boo  secret.boo  sine.boo  slideshow_logic.inc  slideshow_start.inc  sneaky.boo
include/: beepboop.h  booboo.h  main.h
include/booboo/: booboo.h
include/booboo/internal/: booboo.h
misc/batch_files/cmake/windows/: beepboop.bat  booboo.bat  boopboop.bat  shim4.bat
shim4/: CMakeLists.txt  versioninfo.rc
shim4/include/shim4/: a_star.h  achievements.h  audio.h  basic_types.h  cd.h  cloud.h  cpa.h  crash.h  devsettings.h  error.h  flac.h  font.h  gfx.h  gui.h  image.h  input.h  interp.h  ios.h  json.h  macosx.h  main.h  md5.h  mml.h  model.h  mt.h  pixel_font.h  primitives.h  sample.h  savetool.h  shader.h  shim.h  shim4.h  sound.h  sprite.h  steamworks.h  tilemap.h  tokenizer.h  translation.h  trigger.h  ttf.h  (+7 more)
shim4/include/shim4/internal/: gfx.h  shim.h  util.h
shim4/src/: a_star.cpp  achievements.cpp  apple.M  audio.cpp  cd.cpp  cloud.cpp  cpa.cpp  crash.cpp  devsettings.cpp  error.cpp  flac.cpp  font.cpp  gamecenter.M  gfx.cpp  gui.cpp  image.cpp  input.cpp  interp.cpp  ios.M  json.cpp  macosx.M  md5.cpp  mml.cpp  model.cpp  mt19937ar.cpp  pixel_font.cpp  primitives.cpp  sample.cpp  shader.cpp  shim.cpp  sound.cpp  sprite.cpp  steamworks.cpp  tilemap.cpp  tokenizer.cpp  translation.cpp  ttf.cpp  utf8.cpp  util.cpp  vertex_cache.cpp  (+4 more)
src/: beepboop.cpp  booboo.cpp  boopboop.cpp  library.cpp  main.cpp
tgui6/: CMakeLists.txt  versioninfo.rc
tgui6/include/tgui6/: tgui6.h  tgui6_sdl.h
tgui6/src/: tgui6.cpp  tgui6_sdl.cpp
